--- a/index.html
+++ b/index.html
@@ -13,8 +13,63 @@
 
 <body>
   <div class="wrapper">
-    
+    <header>
+      <div class="top-nav"></div>
+      <div class="bottom-nav"></div>
+      <div class="cta"></div>
+      <nav></nav>
+    </header>
+  
+    <div class="hero">
+      <div class="hero-left"></div>
+      <div class="hero-right"></div>
+      <div class="hero-right"></div>
+    </div>
+    <div class="main-content">
+      <h2 class="title"></h2>
+      <div class="news">
+        <div class="news-article"></div>
+        <div class="news-article"></div>
+        <div class="news-article"></div>
+        <div class="news-article"></div>
+        <div class="news-article"></div>
+        <div class="news-article"></div>
+        <div class="news-article"></div>
+        <div class="news-article"></div>
+      </div>
+      <h2 class="title"></h2>
+      <div class="funding-rounds">
+        <div class="round"></div>
+        <div class="round"></div>
+        <div class="round"></div>
+        <div class="round"></div>
+      </div>
+      <div class="articles">
+        <div class="article"></div>
+        <div class="article"></div>
+        <div class="article"></div>
+        <div class="article"></div>
+        <div class="article"></div>
+        <div class="article"></div>
+        <div class="article"></div>
+        <div class="article"></div>
+        <div class="article"></div>
+      </div>
+      <h2 class="title"></h2>
+      <div class="deals">
+        <div class="deal"></div>
+        <div class="deal"></div>
+        <div class="deal"></div>
+        <div class="deal"></div>
+        <div class="deal"></div>
+        <div class="deal"></div>
+        <div class="deal"></div>
+        <div class="deal"></div>
+      </div>
+    </div>
+    <div class="social-media"></div>
   </div>
+  <footer></footer>
 </body>
 </html>
 
