updated layout to match TNW updated site

--- a/index.html
+++ b/index.html
@@ -13,63 +13,79 @@
 
 <body>
   <div class="wrapper">
-    <header>
-      <div class="top-nav"></div>
-      <div class="bottom-nav"></div>
-      <div class="cta"></div>
       <nav></nav>
-    </header>
-  
+
+      <header>
+        <div class="header-left"></div>
+        <div class="header-right"></div>
+      </header>
     <div class="hero">
-      <div class="hero-left"></div>
-      <div class="hero-right"></div>
-      <div class="hero-right"></div>
+      <div class="left">
+        <div class="left-top"></div>
+        <div class="left-bottom"></div>
+      </div>
+      <div class="right">
+        <div class="right-top">
+          <div class="right-top-left"></div>
+          <div class="right-top-right"></div>
+        </div>
+        <div class="right-bottom"></div>
+      </div>
     </div>
-    <div class="main-content">
-      <h2 class="title"></h2>
-      <div class="news">
-        <div class="news-article"></div>
-        <div class="news-article"></div>
-        <div class="news-article"></div>
-        <div class="news-article"></div>
-        <div class="news-article"></div>
-        <div class="news-article"></div>
-        <div class="news-article"></div>
-        <div class="news-article"></div>
-      </div>
-      <h2 class="title"></h2>
-      <div class="funding-rounds">
-        <div class="round"></div>
-        <div class="round"></div>
-        <div class="round"></div>
-        <div class="round"></div>
-      </div>
+
+    <div class="popular-articles">
+      <h2></h2>
       <div class="articles">
         <div class="article"></div>
         <div class="article"></div>
         <div class="article"></div>
         <div class="article"></div>
         <div class="article"></div>
-        <div class="article"></div>
-        <div class="article"></div>
-        <div class="article"></div>
-        <div class="article"></div>
-      </div>
-      <h2 class="title"></h2>
-      <div class="deals">
-        <div class="deal"></div>
-        <div class="deal"></div>
-        <div class="deal"></div>
-        <div class="deal"></div>
-        <div class="deal"></div>
-        <div class="deal"></div>
-        <div class="deal"></div>
-        <div class="deal"></div>
       </div>
     </div>
-    <div class="social-media"></div>
+    <div class="latest-stories">
+      <h2></h2>
+      <div class="stories">
+        <div class="story"></div>
+        <div class="story"></div>
+        <div class="story"></div>
+        <div class="story"></div>
+        <div class="story"></div>
+        <div class="story"></div>
+        <div class="story"></div>
+        <div class="story"></div>
+      </div>
+      <button class="all-news">All News</button>
+    </div> 
+    <div class="explore-channels">
+      <h2></h2>
+      <div class="channels">
+        <div class="channel"></div>
+        <div class="channel"></div>
+        <div class="channel"></div>
+        <div class="channel"></div>
+        <div class="channel"></div>
+      </div>
+    </div>
+    <div class="cta">
+    </div>
+    <div class="what-we-made">
+      <h2>Watch what we made you</h2>
+      <div class="content">
+        <div class="what-we-made-left"></div>
+        <div class="what-we-made-right"></div>
+      </div>
+    </div>
+    <div class="work-with-us">
+      <div class="content">
+        <div class="work-with-us-left"></div>
+        <div class="work-with-us-right"></div>
+      </div>
+      <div class="companies"></div>
+    </div>
+    <footer></footer>
   </div>
-  <footer></footer>
+  
 </body>
 </html>
 
