--- a/index.html
+++ b/index.html
@@ -13,23 +13,50 @@
 
 <body>
   <div class="wrapper">
-      <nav></nav>
+      <nav>
+        <ul>
+          <li><svg preserveAspectRatio="xMidYMid meet" viewBox="0 0 66 16" ><path d="M32.23993 5A6.00284 6.00284 0 0 1 34 9.24261V16h-6v-5.929a2.00249 2.00249 0 0 0-.58856-1.41424l-2.07239-2.07101A2.00315 2.00315 0 0 0 23.92346 6H22v10h-6V0h8.75189a6 6 0 0 1 4.24268 1.75739zM60 0v5.929a2.00245 2.00245 0 0 1-.58856 1.41418l-2.07385 2.071A1.99969 1.99969 0 0 1 55.9234 10h-2.88214A5.99166 5.99166 0 0 0 54 6.75732V0h-6v5.929a2.00245 2.00245 0 0 1-.58856 1.41418l-2.07385 2.071A1.99969 1.99969 0 0 1 43.9234 10H42V0h-6v16h8.75189a6.003 6.003 0 0 0 4.244-1.75739L51 12.23938V16h5.75189a6.003 6.003 0 0 0 4.244-1.75739l3.244-3.24267A6.00264 6.00264 0 0 0 66 6.75732V0zM0 6h4v10h6V6h4V0H0z"></path></svg></li>
+          <div class="center-nav">
+            <li>Home</li>
+            <li>News</li>
+            <li>Events</li>
+            <li>Progams</li>
+            <li>Spaces</li>
+            <li>More</li>
+          </div>
+          <li class="mail">Mail</li>
+        </ul>
+      </nav>
 
       <header>
-        <div class="header-left"></div>
-        <div class="header-right"></div>
+        <div class="header-left">
+          <svg serveaspectratio="xMidYMid meet" viewBox="0 0 66 16" xmlns="http://www.w3.org/2000/svg" class="tnw-svg"><path fill="#000" class="nextLogo" d="M32.23993 5A6.00284 6.00284 0 0 1 34 9.24261V16h-6v-5.929a2.00249 2.00249 0 0 0-.58856-1.41424l-2.07239-2.07101A2.00315 2.00315 0 0 0 23.92346 6H22v10h-6V0h8.75189a6 6 0 0 1 4.24268 1.75739zM60 0v5.929a2.00245 2.00245 0 0 1-.58856 1.41418l-2.07385 2.071A1.99969 1.99969 0 0 1 55.9234 10h-2.88214A5.99166 5.99166 0 0 0 54 6.75732V0h-6v5.929a2.00245 2.00245 0 0 1-.58856 1.41418l-2.07385 2.071A1.99969 1.99969 0 0 1 43.9234 10H42V0h-6v16h8.75189a6.003 6.003 0 0 0 4.244-1.75739L51 12.23938V16h5.75189a6.003 6.003 0 0 0 4.244-1.75739l3.244-3.24267A6.00264 6.00264 0 0 0 66 6.75732V0zM0 6h4v10h6V6h4V0H0z"></path></svg>
+        </div>
+        <div class="header-right">
+          <h1>The heart of tech </h1>
+        </div>
       </header>
     <div class="hero">
       <div class="left">
-        <div class="left-top"></div>
-        <div class="left-bottom"></div>
+        <div class="left-top">
+          <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/leak.jpeg" alt="">
+        </div>
+        <div class="left-bottom">
+          <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/next_home-promo_tnw2021-1146x372.jpg" alt="">
+        </div>
       </div>
       <div class="right">
         <div class="right-top">
-          <div class="right-top-left"></div>
-          <div class="right-top-right"></div>
+          <div class="right-top-left">
+            <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/clubhouse.jpeg" alt="">
+          </div>
+          <div class="right-top-right">
+            <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/germany.jpeg" alt="">
+          </div>
         </div>
-        <div class="right-bottom"></div>
+        <div class="right-bottom">
+          <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/gpt-3.jpeg" alt="">
+        </div>
       </div>
     </div>
 
