finished Hero section for full size site

--- a/index.html
+++ b/index.html
@@ -39,23 +39,40 @@
     <div class="hero">
       <div class="left">
         <div class="left-top">
-          <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/leak.jpeg" alt="">
+            <div class="overlay">
+              <p class="article-category">Neural</p>
+              <p class="article-title">Twitter's new 'Blue' service is yet another tax on minorities</p>
+            </div>
         </div>
         <div class="left-bottom">
-          <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/next_home-promo_tnw2021-1146x372.jpg" alt="">
+          <div class="overlay lb">
+            <p class="lb-title">Europe's leading tech festival is leveling up<br> TNW Conference goes hybrid</p>
+            <input type="Submit" class="learn-more" value="LEARN MORE"></input>
+          </div>
         </div>
       </div>
       <div class="right">
         <div class="right-top">
+          
           <div class="right-top-left">
-            <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/clubhouse.jpeg" alt="">
+            <div class="overlay">
+              <p class="article-category">Neural</p>
+              <p class="article-title">China's 'Wu Dao' AI is 10X bigger than GPT-3, and it can sing</p>
+            </div>
           </div>
           <div class="right-top-right">
-            <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/germany.jpeg" alt="">
+            <div class="overlay">
+              <p class="article-category">Shift</p>
+              <p class="article-title">Left-hand turns slow down traffic and make roads unsafe -- let's get rid of them</p>
+            </div>
           </div>
         </div>
         <div class="right-bottom">
-          <img src="https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/gpt-3.jpeg" alt="">
+          <div class="overlay">
+            <p class="article-category">Neural</p>
+              <p class="article-title">Here's why the US continues to beat China in the AI race</p>
+          </div>
+          
         </div>
       </div>
     </div>
